--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <h1 style="text-align:center;">Policy</h1>
 
-<p style="color:212121; text-align:center;">KerDev built the NaniMo app as a Free app. This SERVICE is provided by KerDev at no cost and is intended for use as is.
+<pre style="color:212121;">KerDev built the NaniMo app as a Free app. This SERVICE is provided by KerDev at no cost and is intended for use as is.
 
 This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
 
@@ -68,6 +68,6 @@ This policy is effective as of 12-10-2021
 
 Contact Us:
 
-If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at pinyapplefromyt@gmail.com</p>
+If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at pinyapplefromyt@gmail.com</pre>
 
 </html>
